--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@
 /build
 /captures
 .externalNativeBuild
+.idea/vcs.xml
+.idea/runConfigurations.xml
+.idea/misc.xml
+.idea/gradle.xml
+.idea/encodings.xml
+.idea/
